[SAFRAN-1012] Export project as library - Fix Export Wizard
Add error message when the exported message has dependencies.